# liteattention-sm120

./: .gitignore  AGENTS.md  BUILDING.md  Dockerfile  MANIFEST.in  README.md  bench_sm120.py  bench_sm89.py  compile_and_profile.sh  ncu_bench.py  pyproject.toml  setup.py  test_lite_attention.py  test_skip_sm120.py  test_skip_sm89.py
.github/: CI-README.md
.github/workflows/: _build.yml  lint.yml  manual-build.yml  pytest.yml  release.yml
examples/cogvideox/: README.md  baseline_fa2.py  liteattention_kernel_only.py  liteattention_skiplist.py
hopper/: README.md  __init__.py  calibrated_module.py  lite_attention.py  pyproject.toml  setup.py
hopper/_internal/: flash_attn_interface.py
hopper/_internal/benchmarks/: benchmark_attn.py
hopper/_internal/cpp/: flash_api.cpp  mainloop_fwd_sm80.hpp  skip_list.h  static_switch.h  utils.h
hopper/calibrated_module/: config.py  module.py  registry.py
hopper/tests/: conftest.py  test_calibrated_module.py  test_calibration_gpu.py  test_flash_attn.py  test_lite_attention.py  test_util.py
patches/: sm89_patches.diff
reports/: 01_fa4_softcap_inversion.md  02_liteattention_sm80_skip_list.md  03_fa4_local_mask_sm90.md  04_backlite_code_review.md
